# llm_mad

./: README.md  pyproject.toml  requirements.txt
llm_mad/: prompts.py  reviews.py
llm_mad/llm/: classifier.py  quantifier.py
src/: prompts.py  quantify.py  simulation.py  visualization.py
src/llm/: __init__.py
src/llm_mad/: __init__.py  prompts.py  reviews.py  simulation.py  visualization.py
src/llm_mad/llm/: base.py  classifier.py  quantifier.py
src/llm_mad/models/: base.py  epsilon.py  fairweather.py  random.py
src/models/: __init__.py  epsilon.py  fairweather.py
