[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_mad"
version = "0.1.0"
authors = [
  { name="arvinduh", email="your-email@example.com" },
]
description = "A project to compare multi-armed bandit algorithms for restaurant selection using LLMs."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# All your dependencies go here now.
dependencies = [
    "pandas",
    "requests",
    "matplotlib",
    "seaborn",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/arvinduh/llm_mad"
Issues = "https://github.com/arvinduh/llm_mad/issues"

[tool.setuptools.packages.find]
where = ["src"]